--- a/src/app/update-product/update-product.component.html
+++ b/src/app/update-product/update-product.component.html
@@ -8,17 +8,13 @@
         </div>
         <div class="panel-body">
           <div class="form-group">
-            <label for="name">
-              Name
-            </label>
-            <input type="text" class="form-control" name="name" id="name" placeholder="Name" [(ngModel)]="data.name" ngModel>
+            <label for="name">Name</label>
+            <input type="text" class="form-control" name="name" id="name" placeholder="Name" [(ngModel)]="data.name" ngModel />
           </div>
           <div class="form-group">
-              <label for="color">
-                Color
-              </label>
-              <input type="text" class="form-control" name="color" id="color" placeholder="Color" [(ngModel)]="data.color" ngModel>
-            </div>
+            <label for="color">Color</label>
+            <input type="text" class="form-control" name="color" id="color" placeholder="Color" [(ngModel)]="data.color" ngModel />
+          </div>
         </div>
         <div class="panel-footer">
           <input type="submit" value="Update Product" class="btn btn-success" />
